--- a/package.json
+++ b/package.json
@@ -1,14 +1,41 @@
 {
-  "name": "onezo1",
+  "name": "electro-rent",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.3.4",
+    "@nivo/line": "^0.84.0",
+    "@reduxjs/toolkit": "^2.1.0",
+    "@stomp/stompjs": "^7.0.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react-modal": "^3.16.3",
+    "antd": "^5.13.2",
+    "antd-img-crop": "^4.21.0",
+    "axios": "^1.6.5",
     "react": "^18.2.0",
+    "react-calendar": "^4.8.0",
+    "react-cookie": "^7.0.2",
+    "react-data-table-component": "^7.6.2",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.3",
+    "react-modal": "^3.16.1",
+    "react-quill": "^2.0.0",
+    "react-redux": "^9.1.0",
+    "react-router": "6.21.3",
+    "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
+    "react-spinners": "^0.13.8",
+    "react-table": "^7.8.0",
+    "redux": "^5.0.1",
+    "sass": "^1.69.7",
+    "swiper": "^11.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -34,5 +61,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^8.56.0",
+    "eslint-plugin-react": "^7.33.2"
   }
 }
