--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "redux": "^5.0.1",
     "sass": "^1.69.7",
     "swiper": "^11.1.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
