--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@hookform/resolvers": "^3.3.4",
     "@nivo/line": "^0.84.0",
     "@reduxjs/toolkit": "^2.2.3",
@@ -24,6 +27,7 @@
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
+    "react-icons": "^5.1.0",
     "react-modal": "^3.16.1",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.1",
