--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@nivo/line": "^0.84.0",
     "@reduxjs/toolkit": "^2.2.3",
     "@stomp/stompjs": "^7.0.0",
+    "@tanstack/react-query": "^5.32.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tosspayments/payment-widget-sdk": "^0.10.2",
     "@types/react-modal": "^3.16.3",
     "antd": "^5.16.4",
     "antd-img-crop": "^4.21.0",
