--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-table": "^7.8.0",
     "redux": "^5.0.1",
     "sass": "^1.69.7",
+    "sweetalert2": "^11.10.8",
     "swiper": "^11.1.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
@@ -73,5 +74,5 @@
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2"
   },
-  "proxy": "http://two.hellomh.site"
+  "proxy": "http://two.hellomh.site/"
 }
