--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
     "react-icons": "^5.1.0",
+    "react-kakao-maps-sdk": "^1.1.27",
     "react-modal": "^3.16.1",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.1",
